--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rumqttd"
-version = "0.19.0"
+version = "0.20.0"
 publish = true
 description = "rumqttd is a high performance MQTT broker written in Rust which is light weight and embeddable"
 keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
@@ -33,9 +33,9 @@ config = "0.14"
 tracing = { version="0.1", features=["log"] }
 tracing-subscriber = { version="0.3.18", features=["env-filter"] }
 metrics = "0.22.1"
-metrics-exporter-prometheus = { version = "0.13.1", default-features = false, features = ["http-listener"] }
-clap = { version = "4.4", features = ["derive"] }
-axum = "0.7.4"
+#metrics-exporter-prometheus = { version = "0.13.1", default-features = false, features = ["http-listener"] }
+clap = { version = "=4.4.18", features = ["derive"] }
+axum = { version = "=0.7.5", features = ["tokio", "json"], git = "https://github.com/rodjjo/axum", branch=  "main" }
 rand = "0.8.5"
 uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
 subtle = "2.5"
